--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kukeight_static",
+  "name": "kukeight-static",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "eslint-config-next": "13.5.1",
+    "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
