--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/": ["/src"],
+      "@/public/*": ["public/*"],
+      "@/components/*": ["src/components/*"]
     }
   }
 }
