--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "sass": "^1.68.0"
   }
 }
