--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/": ["/src"],
+      "@/": ["src/*"],
       "@/public/*": ["public/*"],
       "@/components/*": ["src/components/*"]
     }
