--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
+    "react-spring": "^9.7.3",
     "react-use-scroll-position": "^2.0.0"
   },
   "devDependencies": {
