--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.3",
-    "react-use-scroll-position": "^2.0.0"
+    "react-use-scroll-position": "^2.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "sass": "^1.68.0"
