--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "eslint-config-next": "13.5.1",
     "lodash": "^4.17.21",
     "next": "13.5.1",
-    "react": "18.2.0",
+    "react": "^16.8.0",
     "react-bootstrap": "^2.8.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^16.8.0",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.3",
     "react-star-rating-component": "^1.4.1",
