--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-pageflip": "^2.0.3",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.3",
     "react-use-scroll-position": "^2.0.0",
